--- a/UDP/nbproject/project.properties
+++ b/UDP/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=udp.UDPClient
+main.class=PRACTICA_UDP.CLIENTE
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
